# r2k

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile  README.md  argToKp  config.h  main.c  mp  r2kd.service  update_defs
dict/: dict.py  temp
protocol/: kb-protocol.c  kb-protocol.h
resources/: dict.py
src/: config.h  daemon.c  defs.h  dict.c  dict.h  log.c  log.h  r2k.c  type-wl.c  type-wl.h  type-x.c  type-x.h  type.c  type.h
src/protocol/: kb-protocol.c
